--- a/static/html/sideBar.html
+++ b/static/html/sideBar.html
@@ -52,7 +52,7 @@
     </div>
 
     <li class="nav-item">
-      <a class="nav-link" href="charts.html">
+      <a class="nav-link" href="/dashboard/classificacao">
         <i class="fas fa-fw fa-list-ol"></i>
         <span>Classificação</span></a>
     </li>
