--- a/static/html/logoutModal.html
+++ b/static/html/logoutModal.html
@@ -10,7 +10,10 @@
       <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
       <div class="modal-footer">
         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" href="login.html">Logout</a>
+        <form action='/logout' method='POST'>
+          <input class="btn btn-primary" type="Submit" value='Logout'>
+        </form>
+        <!-- <a class="btn btn-primary" href="/logout">Logout</a> -->
       </div>
     </div>
   </div>
