--- a/static/html/sideBar.html
+++ b/static/html/sideBar.html
@@ -12,7 +12,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item">
-      <a class="nav-link" href="index.html">
+      <a class="nav-link" href="/dashboard">
         <i class="fas fa-fw fa-futbol"></i>
         <span>Próximo Jogo</span></a>
     </li>
@@ -59,14 +59,14 @@
 
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-      <a class="nav-link" href="charts.html">
+      <a class="nav-link" href="/dashboard/jogadores">
         <i class="fas fa-fw fa-running"></i>
         <span>Jogadores</span></a>
     </li>
 
     <!-- Nav Item - Tables -->
     <li class="nav-item">
-      <a class="nav-link" href="tables.html">
+      <a class="nav-link" href="/dashboard/novidades">
         <i class="fas fa-fw fa-globe"></i>
         <span>Novidades</span></a>
     </li>
