--- a/public/Dashboard/Tabelas/jogadores.html
+++ b/public/Dashboard/Tabelas/jogadores.html
@@ -136,7 +136,7 @@
   <script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="/static/js/sb-admin-2.min.js"></script>
+  <script src="/static/js/sb-admin-2.js"></script>
 
   <script>
 
@@ -160,10 +160,14 @@ const externalContent = [
 ]
 
 const loadhtml = () => {
+  let counter = externalContent.length;
   externalContent.forEach((elem)=>{
     var xhr = new XMLHttpRequest();
     xhr.onload = function() {
       document.querySelector(elem.class).innerHTML=this.responseText;
+      counter--;
+      console.log(counter);
+      if(counter<=0)loadScripts();
     }
     xhr.open("GET", elem.url);
     xhr.responseType = "text";
