--- a/public/Dashboard/Pages/blank.html
+++ b/public/Dashboard/Pages/blank.html
@@ -230,6 +230,72 @@
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
 
+          <div class="row" id="sampleCard" style="">
+            <!-- Page Heading -->
+            <div class="card my-5"  ><!--Criar um modal para os comentarios-->
+              <img class="card-img-top" src="/static/img/Novidades/relvado.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Titulo</h5>
+                <h6 class="card-subtitle mb-2 text-muted">35 minutes</h6><br>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Like!</a>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Comentários...</button>
+              </div>
+            </div>
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Comentários</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="row" id="sampleCard" style="">
+            <!-- Page Heading -->
+            <div class="card my-5"  ><!--Criar um modal para os comentarios-->
+              <img class="card-img-top" src="/static/img/Novidades/relvado.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Titulo</h5>
+                <h6 class="card-subtitle mb-2 text-muted">35 minutes</h6><br>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Like!</a>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Comentários...</button>
+              </div>
+            </div>
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Comentários</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
         </div>
         <!-- /.container-fluid -->
 
