--- a/public/Dashboard/Tabelas/classificacao.html
+++ b/public/Dashboard/Tabelas/classificacao.html
@@ -29,7 +29,7 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dashboard">
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
@@ -41,7 +41,7 @@
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard">
+        <a class="nav-link" href="/dashboard/proximo">
           <i class="fas fa-fw fa-futbol"></i>
           <span>Próximo Jogo</span></a>
       </li>
@@ -55,19 +55,19 @@
       </div>
 
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="/dashboard/resultado">
           <i class="fas fa-fw fa-dice"></i>
           <span>Resultado</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="/dashboard/inicial">
           <i class="fas fa-fw fa-tshirt"></i>
           <span>11 Inicial</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="/dashboard/historico">
           <i class="fas fa-fw fa-history"></i>
           <span>Histórico</span></a>
       </li>
@@ -109,13 +109,13 @@
       </div>
 
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="/dashboard/historia">
           <i class="fas fa-fw fa-address-book"></i>
           <span>A Nossa História</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="/dashboard/mourisquense">
           <i class="fas fa-fw fa-book-open"></i>
           <span>Mourisquense</span></a>
       </li>
@@ -153,25 +153,25 @@
               <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-bell fa-fw"></i>
                 <!-- Counter - Alerts -->
-                <span class="badge badge-danger badge-counter">3+</span>
+                <span id="navNotificationCounter" class="badge badge-danger badge-counter">3+</span>
               </a>
               <!-- Dropdown - Alerts -->
-              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
+              <div id="navNoti" class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
                 <h6 class="dropdown-header">
                   Notificações
                 </h6>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                  <div class="mr-3">
+                <a id="navNotiElem" style="display: none;" class="dropdown-item d-flex align-items-center" href="#">
+                  <!-- <div class="mr-3">
                     <div class="icon-circle bg-primary">
                       <i class="fas fa-file-alt text-white"></i>
                     </div>
-                  </div>
+                  </div> -->
                   <div>
-                    <div class="small text-gray-500">December 12, 2019</div>
-                    <span class="font-weight-bold">A new monthly report is ready to download!</span>
+                    <div id="navNotiDate" class="small text-gray-500">December 12, 2019</div>
+                    <span id="navNotiTitle" class="font-weight-bold">A new monthly report is ready to download!</span>
                   </div>
                 </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
+                <!-- <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="mr-3">
                     <div class="icon-circle bg-success">
                       <i class="fas fa-donate text-white"></i>
@@ -192,8 +192,8 @@
                     <div class="small text-gray-500">December 2, 2019</div>
                     Spending Alert: We've noticed unusually high spending for your account.
                   </div>
-                </a>
-                <a class="dropdown-item text-center small text-gray-500" href="#">Mostrar todas</a>
+                </a> -->
+                <!-- <a class="dropdown-item text-center small text-gray-500" href="#"></a> -->
               </div>
             </li>
         
@@ -202,8 +202,8 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
-                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                <span id="navName" class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                <img id="navImagem" class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -307,10 +307,13 @@
   <!-- Custom scripts for all pages-->
   <script src="/static/js/sb-admin-2.js"></script>
 
+  <!-- <script src="/static/js/myjs.js"></script> -->
+
   <script>
+
 (function(){
   let url = '/database/classificacao';
-  var xhr = new XMLHttpRequest();
+  let xhr = new XMLHttpRequest();
   xhr.onload = function() {
     let data = JSON.parse(this.response);
     setTable(data);
