--- a/public/Dashboard/Tabelas/jogadores.html
+++ b/public/Dashboard/Tabelas/jogadores.html
@@ -42,7 +42,7 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dashboard">
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
@@ -54,7 +54,7 @@
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard">
+        <a class="nav-link" href="/dashboard/proximo">
           <i class="fas fa-fw fa-futbol"></i>
           <span>Próximo Jogo</span></a>
       </li>
@@ -68,19 +68,19 @@
       </div>
 
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="/dashboard/resultado">
           <i class="fas fa-fw fa-dice"></i>
           <span>Resultado</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="/dashboard/inicial">
           <i class="fas fa-fw fa-tshirt"></i>
           <span>11 Inicial</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="/dashboard/historico">
           <i class="fas fa-fw fa-history"></i>
           <span>Histórico</span></a>
       </li>
@@ -122,13 +122,13 @@
       </div>
 
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="/dashboard/historia">
           <i class="fas fa-fw fa-address-book"></i>
           <span>A Nossa História</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="/dashboard/mourisquense">
           <i class="fas fa-fw fa-book-open"></i>
           <span>Mourisquense</span></a>
       </li>
